<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In Or Register</string>
    <string name="welcome">Welcome to ShoeStore</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="log_out">Log out</string>
    <string name="shoe_name">Shoe name</string>
    <string name="input_shoe_name">Input shoe name</string>
    <string name="company_name">Company name</string>
    <string name="size">Size</string>
    <string name="input_shoe_size">Input shoe size</string>
    <string name="description">Description</string>
    <string name="input_description">Input description</string>
    <string name="step_two">2. Tap Save Button to save the shoe</string>
    <string name="step_one">1. Tap + to add a new shoe</string>
    <string name="next">Next</string>
    <string name="input_company_name">Input company name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_one">This app based on Kotlin Android Development by Udacity</string>
</resources>
