<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeListingViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        tools:context=".screens.ShoeDetailFragment">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Shoe"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layout_shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_header"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                android:layout_weight="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_shoe_name"
                android:text="@={shoeListingViewModel.shoe.name}"
                android:importantForAutofill="no"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_shoe_name"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_weight="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Input company name"
                android:text="@={shoeListingViewModel.shoe.company}"
                android:importantForAutofill="no"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_company_name"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:layout_weight="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_shoe_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_shoe_size"
                android:importantForAutofill="no"
                android:layout_weight="3"
                android:text="@={`` + shoeListingViewModel.shoe.size}"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_shoe_size"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_weight="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_description"
                android:importantForAutofill="no"
                android:layout_weight="3"
                android:text="@={shoeListingViewModel.shoe.description}" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_description">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> shoeListingViewModel.addShoe()}"
                android:text="Save" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{()-> shoeListingViewModel.cancel()}"
                android:layout_height="wrap_content"
                android:text="Cancel" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>