<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
<!--    Using MaterialCardView to circular border, elevation,...-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shoeItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="8dp">
        <!-- Using a linear layout because it provides a more uniform look since we are  looping through variable data to display on the screen-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/width_114"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />
                <TextView
                    android:id="@+id/shoe_name"
                    android:layout_width="@dimen/width_263"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/width_114"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name" />
                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="@dimen/width_263"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/width_114"
                    android:layout_height="wrap_content"
                    android:text="@string/size" />
                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="@dimen/width_263"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/width_114"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>